--- a/src/components/TicketDetail/TicketDetail.css
+++ b/src/components/TicketDetail/TicketDetail.css
@@ -1,20 +1,38 @@
 .ticket-detail {
   width: 90%;
   margin: auto;
-  text-align: center;
-  color: #3b0062;
+  /* text-align: center; */
+  color: #101010;
+  /* border: #707070 1px solid; */
+
+  margin: 1rem auto;
+  border-radius: 10px;
+  padding: 0.5rem;
+  box-shadow: 0 1px 8px #2b2b2b;
 }
 
-.ticket-detail h2 {
+.ticket-detail h3 {
   font-size: 1rem;
   color: #464646;
   padding-bottom: 1rem;
-  border-bottom: 2px solid #464646;
+  border-bottom: 1px solid #464646;
 }
 
 .ticket-detail__meta {
   color: #707070;
   margin: 1rem auto;
+  display: flex;
+  justify-content: stretch;
+}
+
+.ticket-detail__meta h6 {
+  margin: 0 0.3rem;
+  font-size: 1rem;
+}
+
+.ticket-detail__desc {
+  text-align: left;
+  padding-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
