--- a/src/components/TicketItem/TicketItem.css
+++ b/src/components/TicketItem/TicketItem.css
@@ -1,6 +1,6 @@
 .ticket {
-  min-width: 95%;
-  margin: 1rem auto;
+  width: 90%;
+  margin: 0.8rem auto;
   border-radius: 10px;
   padding: 0.5rem;
   box-shadow: 0 1px 8px #2b2b2b;
@@ -15,17 +15,24 @@
 .ticket__subject {
   font-size: 1.5rem;
   margin: 0.5rem 0;
-  color: #243eff;
+  color: #10c2b0;
+  text-align: left;
 }
 .ticket__body {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: flex-start; */
+  /* align-items: center; */
+}
+
+.ticket__content {
+  width: 80%;
+  text-align: left;
 }
 
 .ticket__actions {
+  width: 20%;
   text-align: right;
-  margin: 0;
+  margin: 0.5rem;
 }
 
 /* .ticket__footer {
